fix bug size too long

--- a/build-up-frontend/src/scss/product_description/size_selection.scss
+++ b/build-up-frontend/src/scss/product_description/size_selection.scss
@@ -109,6 +109,10 @@
       font-style: normal;
       font-weight: 500;
       line-height: normal;
+
+      width: 60px;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
 
     &--price {
